styles/header.css
/*
Header styles
*/

.search-categories-header {
  top: 0;
  z-index: 1;
  background-color: white;
  padding-top: 14px;
  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.03), 0px 1px 2px rgba(0, 0, 0, 0.05);
}

.search-section {
  display: grid;
  grid-template-columns: auto min-content;
  align-items: center;
  margin: 0 16px;
  column-gap: 10px;
}

.search-component {
  display: grid;
  grid-template-columns: 42px auto;
  border: 0.5px solid rgba(0, 0, 0, 0.1);
  border-bottom-color: transparent;
  border-radius: 40px;
  height: 55.5px;
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
  justify-items: left;
  align-items: center;
  min-width: 265px;
}

.search-icon {
  margin-left: 15px;
  /* Original styles from svg image moved here to save space/avoid duplication in index.html. */
  display: block;
  height: 20px;
  width: 20px;
  fill: currentColor;
}

.search-text-container {
  margin-left: 6px;
  margin-top: 2px;
}

.search-subtext {
  font-size: 12px;
}

.search-subtext .bullet {
  margin: 0 2.5px 0 2.5px;
}

.filter-button {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 40px;
  height: 40px;
  border: 1px solid #b0b0b0;
  border-radius: 20px;
  background-color: #ffffff;
}

.filter-button svg {
  /* Original styles from svg image moved here to save space/avoid duplication in index.html. */
  display: block;
  fill: none;
  height: 16px;
  width: 16px;
  stroke: currentcolor;
  stroke-width: 4px;
  overflow: visible;
}

.categories-nav {
  margin-top: 16.5px;
  margin-left: 14px;
  padding-bottom: 13.5px;
  overflow: hidden;
}

.categories-component {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: 50px;
  grid-column-gap: 33px;
}

.category-item {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-wrap: nowrap;
  /* CSS filters are used here to dynamically change all category items' image and text colors to a grey tint.
  And this CSS filter is then unset in the category item's hover state below,
  returning the "hovered over" category item to its original black foreground colour.
  For details on CSS filters, see: https://stackoverflow.com/questions/22252472/how-to-change-the-color-of-an-svg-element
  and: "Target color" field at: https://codepen.io/sosuke/pen/Pjoqqp. */
  filter: invert(43%) sepia(1%) saturate(0%) hue-rotate(357deg) brightness(94%)
    contrast(90%);
}

.category-item:hover {
  filter: none;
}

.category-image {
  width: 24px;
  height: 24px;
}

.category-item span {
  font-size: 12px;
  margin-top: 3.5px;
}

.active-category {
  filter: none;
}

